--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,16 @@
 .interests {
     text-align: center;
     margin-top: 10%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.roblox {
+}
+
+.art {
+
+}
+
+.videos {
+    
 }
