Changed website to roblox theme

--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,15 @@
 
 .interests {
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 5%;
+    
 }
 
 .roblox {
+    margin-top: 8%;
 }
 
-.art {
+.GFX {
 
 }
 
