Fixed links and added clothing

--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,22 @@
 
 .GFX {
    text-align: center;
-   margin-top: 8%;
+   margin-top: 5%;
 }
 
 .Games {
-    margin-top: 10%;
+    
 }
 
+.clothing {
+
+    
+}
+
+.link {
+    padding: 3%;
+}
+
+.links {
+    margin-top: 2%;
+}
